# Founder-Operating-System-FOS-

./: .env.example  .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/worker/: package.json
docs/: AGENT_LESSONS.md
docs/decisions/: ADR-06-notion-integration-boundary.md  ADR-07-phase-1-agent-runtime.md  DECISION_PACK.md
docs/planning/: BUILD_READINESS_AND_LOOP_PLAN.md  (+1 more)
fos-evals/: README.md  pyproject.toml
fos-evals/fixtures/: README.md
fos-evals/fixtures/enrollment_brief/: contradictory_history.json  incomplete_information.json  out_of_scope_target.json  price_objection.json  prompt_injection.json  revoked_consent.json  strong_fit.json
fos-evals/fixtures/next_best_action/: consent_unknown_blocks.json  cooldown_active.json  offer_unavailable.json  prompt_injection.json  terminal_stage_enrolled.json  warm_follow_up.json
fos-evals/fixtures/personalized_follow_up/: guarantee_in_body_block.json  no_show_recovery_consent_block.json  offer_follow_up_happy.json  prompt_injection.json  unapproved_claim_block.json  unresolvable_personalization_block.json
fos-evals/fixtures/post_call_synthesis/: consent_revoked.json  contradicts_prior_assessment.json  objection_heavy.json  prompt_injection_transcript.json  short_no_show.json  strong_outcome.json
fos-evals/fos_evals/: __init__.py  runner.py
fos-evals/fos_evals.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fos-evals/tests/: test_smoke.py
scripts/: notion-live-setup.ts
(+34 files in other folders)
